--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/2. 功能介绍.md
+++ b/Virtualization/KVM/4. 内存虚拟化/2. 功能介绍.md
@@ -3,39 +3,34 @@
 
 <!-- code_chunk_output -->
 
-- [QEMU 的主要工作](#qemu-的主要工作)
-- [QEMU 和 KVM 的工作分界](#qemu-和-kvm-的工作分界)
-- [1. QEMU中物理内存的注册](#1-qemu中物理内存的注册)
-- [2. 处理用户态虚拟地址](#2-处理用户态虚拟地址)
-- [3. KVM同步脏页位图到Qemu](#3-kvm同步脏页位图到qemu)
-- [4. EPT页表映射](#4-ept页表映射)
+- [1. QEMU 的主要工作](#1-qemu-的主要工作)
+- [2. QEMU 和 KVM 的工作分界](#2-qemu-和-kvm-的工作分界)
+- [3. QEMU中物理内存的注册](#3-qemu中物理内存的注册)
+- [4. 处理用户态虚拟地址](#4-处理用户态虚拟地址)
+- [5. KVM同步脏页位图到Qemu](#5-kvm同步脏页位图到qemu)
+- [6. EPT页表映射](#6-ept页表映射)
 
 <!-- /code_chunk_output -->
 
-# QEMU 的主要工作
+# 1. QEMU 的主要工作
 
-内存虚拟化的目的就是让虚拟机能够无缝的访问内存。有了 **Intel EPT** 的支持后，CPU 在 **VMX non-root** 状态时进行内存访问会**再做一次 EPT 转换**。在这个过程中，QEMU 会负责以下内容：
+查看QEMU/memory
 
-1. 首先需要从**自己的进程地址空间**中**申请内存**用于 **Guest**
-2. 需要将上一步中申请到的内存的**虚拟地址（HVA**）和 **Guest 的物理地址**之间的**映射关系**传递给 KVM，即`GPA->HVA`
-3. 需要组织一系列的数据结构来**管理虚拟内存空间**，并在**内存拓扑结构更改时**将最新的内存信息**同步**至 **KVM** 中
+# 2. QEMU 和 KVM 的工作分界
 
-# QEMU 和 KVM 的工作分界
+QEMU 和 KVM 之间是通过 KVM 提供的`ioctl()`接口进行交互的。
 
-QEMU 和 KVM 之间是通过 KVM 提供的`ioctl()`接口进行交互的。在内核的`kvm_vm_ioctl()`中，设置虚拟机内存的系统调用为`KVM_SET_USER_MEMORY_REGION`：
+# 3. QEMU中物理内存的注册
 
-
-# 1. QEMU中物理内存的注册
-
-通过`kvm_vm_ioctl(KVM_SET_USER_MEMORY_REGION)`实现
+通过`kvm_vm_ioctl(KVM_SET_USER_MEMORY_REGION)`实现, 这个 ioctl 主要目的就是设置`GPA->HVA`的映射关系
 
 本质是创建并填充了一个临时kvm_memslots结构，并把其赋值给kvm->memslots（全局的）。
 
-# 2. 处理用户态虚拟地址
+# 4. 处理用户态虚拟地址
 
 https://blog.csdn.net/jinzhuojun/article/details/8147463
 
-# 3. KVM同步脏页位图到Qemu
+# 5. KVM同步脏页位图到Qemu
 
 https://frankjkl.github.io/2019/04/07/QemuKVM-Qemu%E5%90%8C%E6%AD%A5KVM%E8%84%8F%E9%A1%B5%E4%BD%8D%E5%9B%BE/
 
@@ -43,7 +38,7 @@ https://frankjkl.github.io/2019/04/07/QemuKVM-Qemu%E5%90%8C%E6%AD%A5KVM%E8%84%8F
 
 插播qemu对内存条的模拟管理，是通过`RAMBlock`和`ram_list`管理的，**RAMBlock**就是**每次申请的内存池**，`ram_list`则是RAMBlock的**链表**，他们结构如下：
 
-# 4. EPT页表映射
+# 6. EPT页表映射
 
 内存的添加说完了，看一下[EPT页表](http://www.oenhan.com/kernel-program-exec)的映射，在`kvm_arch_vcpu_setup`中有`kvm_mmu_setup`，是mmu的初始化，EPT的初始化是`init_kvm_tdp_mmu`，所谓的初始化就是填充了`vcpu->arch.mmu`结构体，里面有很多回调函数都会用到，最终的是`tdp_page_fault`。
 
