--- a/Virtualization/KVM/4. 内存虚拟化/4. 内存槽(slot)的注册.md
+++ b/Virtualization/KVM/4. 内存虚拟化/4. 内存槽(slot)的注册.md
@@ -79,6 +79,8 @@ static long kvm_vm_ioctl(struct file *filp,
 ```
 可以看到首要任务就是把参数复制到内核，然后调用了`kvm_vm_ioctl_set_memory_region()`函数。
 
+`struct kvm_userspace_memory_region`详细在`QEMU/Memory`中查看
+
 ```cpp
 int kvm_vm_ioctl_set_memory_region(struct kvm *kvm,
                    struct kvm_userspace_memory_region *mem)
