--- a/Virtualization/QEMU/4. Memory/2. 主要数据结构.md
+++ b/Virtualization/QEMU/4. Memory/2. 主要数据结构.md
@@ -21,7 +21,7 @@
     - [2.5.3. FlatView 与 MemoryRegion](#253-flatview-与-memoryregion)
   - [2.6. MemoryRegionSection: 虚拟机物理地址空间GPA](#26-memoryregionsection-虚拟机物理地址空间gpa)
   - [2.7. KVMSlot: KVM内存条模型](#27-kvmslot-kvm内存条模型)
-  - [2.8. kvm_userspace_memory_region: kvm参数](#28-kvm_userspace_memory_region-kvm参数)
+  - [2.8. kvm_userspace_memory_region: GPA->HVA](#28-kvm_userspace_memory_region-gpa-hva)
   - [2.9. AddressSpace、MemoryRegion、FlatView、MemoryRegionSection与KVMslot的关系](#29-addressspace-memoryregion-flatview-memoryregionsection与kvmslot的关系)
   - [2.10. MemoryListener](#210-memorylistener)
     - [2.10.1. 全局链表和AddressSpace自己的MemoryListener](#2101-全局链表和addressspace自己的memorylistener)
@@ -440,7 +440,7 @@ typedef struct KVMSlot
 
 KVMSlot更接近KVM.
 
-## 2.8. kvm_userspace_memory_region: kvm参数
+## 2.8. kvm_userspace_memory_region: GPA->HVA
 
 ```cpp
 struct kvm_userspace_memory_region {
@@ -458,6 +458,8 @@ struct kvm_userspace_memory_region {
 ```
 
 kvm_userspace_memory_region是和kvm共享的一个结构，说共享不太恰当，但是其实最终作为参数给kvm使用的，kvm获取控制权后，从栈中复制该结构到内核。
+
+`GPA -> HVA`
 
 ## 2.9. AddressSpace、MemoryRegion、FlatView、MemoryRegionSection与KVMslot的关系
 
