--- a/Virtualization/QEMU/4. Memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. Memory/3. 具体实现机制.md
@@ -3,7 +3,7 @@
 
 <!-- code_chunk_output -->
 
-- [1. 整体概述](#1-整体概述)
+- [1. QEMU 的主要工作](#1-qemu-的主要工作)
 - [2. 回调函数的注册](#2-回调函数的注册)
 - [3. 全局的系统AS和MR的初始化: 不分配GPA/HVA](#3-全局的系统as和mr的初始化-不分配gpahva)
   - [3.1. address_space_init(): 整个AS初始化](#31-address_space_init-整个as初始化)
@@ -32,7 +32,13 @@
 
 <!-- /code_chunk_output -->
 
-# 1. 整体概述
+# 1. QEMU 的主要工作
+
+内存虚拟化的目的就是让虚拟机能够无缝的访问内存。有了 **Intel EPT** 的支持后，CPU 在 **VMX non-root** 状态时进行内存访问会**再做一次 EPT 转换**。在这个过程中，QEMU 会负责以下内容：
+
+1. 首先需要从**自己的进程地址空间**中**申请内存**用于 **Guest**
+2. 需要将上一步中申请到的内存的**虚拟地址（HVA**）和 **Guest 的物理地址**之间的**映射关系**传递给 KVM，即`GPA->HVA`
+3. 需要组织一系列的数据结构来**管理虚拟内存空间**，并在**内存拓扑结构更改时**将最新的内存信息**同步**至 **KVM** 中
 
 qemu部分的内存申请流程上可以分为三小部分，分成三小部分主要是我在看代码的时候觉得这三部分耦合性不是很大，相对而言比较独立。
 
