--- Auto-Git Commit ---

--- a/Virtualization/QEMU/2. Init/2. QEMU初始化.md
+++ b/Virtualization/QEMU/2. Init/2. QEMU初始化.md
@@ -16,7 +16,7 @@
       - [3.2.2.2. kvm_init()](#3222-kvm_init)
   - [3.3. machine_class](#33-machine_class)
     - [3.3.1. current_machine](#331-current_machine)
-  - [3.4. pc\_init1函数](#34-pc_init1函数)
+  - [3.4. pc_init1函数](#34-pc_init1函数)
     - [3.4.1. CPU初始化](#341-cpu初始化)
       - [3.4.1.1. vcpu线程](#3411-vcpu线程)
     - [3.4.2. 内存初始化](#342-内存初始化)
@@ -60,7 +60,7 @@ QEMU 的入口`main()`函数位于vl.c中，重点关注以下几点：
 
 ![2019-11-22-09-02-27.png](./images/2019-11-22-09-02-27.png)
 
-```
+```cpp
 int main()
  ├─ atexit(qemu_run_exit_notifiers)          // 注册 QEMU 的退出处理函数
  ├─ module_call_init(MODULE_INIT_QOM)        // 初始化 QOM
@@ -578,7 +578,7 @@ man qemu
            Use "-machine help" to list available machines
 ```
 
-## 3.4. pc\_init1函数
+## 3.4. pc_init1函数
 
 下面有**cpu\_exec\_init\_all**就是执行了qemu的**内存结构体的初始化**而已，**cpudef\_init**()则提供了**VCPU的不同型号的模拟**，qemu\_set\_log设置日志输出，**kvm对外的日志**是从**这里配置**的。
 
