--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/2. 主要功能.md
+++ b/Virtualization/KVM/3. CPU虚拟化/2. 主要功能.md
@@ -20,25 +20,7 @@
 
 ## 1.1. struct kvm
 
-但是更先一步的是KVM结构体，下面的struct是精简后的版本。
-
-```cpp
-struct kvm {
-    struct mm_struct *mm; /* userspace tied to this vm */
-    struct kvm_memslots *memslots;  /*qemu模拟的内存条模型*/
-    struct kvm_vcpu *vcpus[KVM_MAX_VCPUS]; /* 模拟的CPU */
-    atomic_t online_vcpus;
-    int last_boosted_vcpu;
-    struct list_head vm_list;  //HOST上VM管理链表，
-    struct kvm_io_bus *buses[KVM_NR_BUSES];
-    struct kvm_vm_stat stat;
-    struct kvm_arch arch; //这个是host的arch的一些参数
-    atomic_t users_count;
- 
-    long tlbs_dirty;
-    struct list_head devices;
-};
-```
+见`数据结构`
 
 ## 1.2. kvm_arch_init_vm
 
