--- a/Virtualization/KVM/3. CPU虚拟化/3. 数据结构.md
+++ b/Virtualization/KVM/3. CPU虚拟化/3. 数据结构.md
@@ -36,6 +36,7 @@ struct kvm {
 	struct kvm_memslots __rcu *memslots[KVM_ADDRESS_SPACE_NUM];
 	struct srcu_struct srcu;
 	struct srcu_struct irq_srcu;
+    /* 模拟的CPU */
 	struct kvm_vcpu *vcpus[KVM_MAX_VCPUS];
 
 	/*
