--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -45,7 +45,7 @@ KVM内核模块加载之后只提供了一个对外接口/dev/kvm，qemu通过/d
 
 整体流程是:
 
-```
+```cpp
 qemu_open("/dev/kvm", O_RDWR); //KVM访问句柄
 kvm_ioctl(s, KVM_GET_API_VERSION, 0);
 kvm_ioctl(s,KVM_CREATE_VM, 0); //创建vm访问句柄
