--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/2. 主要功能.md
+++ b/Virtualization/KVM/3. CPU虚拟化/2. 主要功能.md
@@ -584,13 +584,17 @@ static int (*kvm_vmx_exit_handlers[])(struct kvm_vcpu *vcpu) = {
     [EXIT_REASON_EXTERNAL_INTERRUPT]      = handle_external_interrupt,
     [EXIT_REASON_TRIPLE_FAULT]            = handle_triple_fault,
     [EXIT_REASON_NMI_WINDOW]          = handle_nmi_window,
+    // 访问了IO设备
     [EXIT_REASON_IO_INSTRUCTION]          = handle_io,
+    // 访问了CR寄存器，地址寄存器，和DR寄存器（debug register)一样，用于调试
     [EXIT_REASON_CR_ACCESS]               = handle_cr,
     [EXIT_REASON_DR_ACCESS]               = handle_dr,
     [EXIT_REASON_CPUID]                   = handle_cpuid,
+    // 访问了MSR寄存器
     [EXIT_REASON_MSR_READ]                = handle_rdmsr,
     [EXIT_REASON_MSR_WRITE]               = handle_wrmsr,
     [EXIT_REASON_PENDING_INTERRUPT]       = handle_interrupt_window,
+    // Guest执行了HLT指令，Demo开胃菜就是这个指令
     [EXIT_REASON_HLT]                     = handle_halt,
     [EXIT_REASON_INVD]              = handle_invd,
     [EXIT_REASON_INVLPG]              = handle_invlpg,
@@ -605,9 +609,11 @@ static int (*kvm_vmx_exit_handlers[])(struct kvm_vcpu *vcpu) = {
     [EXIT_REASON_VMOFF]                   = handle_vmx_insn,
     [EXIT_REASON_VMON]                    = handle_vmx_insn,
     [EXIT_REASON_TPR_BELOW_THRESHOLD]     = handle_tpr_below_threshold,
+    // 访问了APIC
     [EXIT_REASON_APIC_ACCESS]             = handle_apic_access,
     [EXIT_REASON_WBINVD]                  = handle_wbinvd,
     [EXIT_REASON_XSETBV]                  = handle_xsetbv,
+    // 进程切换
     [EXIT_REASON_TASK_SWITCH]             = handle_task_switch,
     [EXIT_REASON_MCE_DURING_VMENTRY]      = handle_machine_check,
     [EXIT_REASON_EPT_VIOLATION]          = handle_ept_violation,
