--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/2. 主要功能.md
+++ b/Virtualization/KVM/3. CPU虚拟化/2. 主要功能.md
@@ -618,6 +618,7 @@ static int (*kvm_vmx_exit_handlers[])(struct kvm_vcpu *vcpu) = {
     [EXIT_REASON_MCE_DURING_VMENTRY]      = handle_machine_check,
     [EXIT_REASON_EPT_VIOLATION]          = handle_ept_violation,
     [EXIT_REASON_EPT_MISCONFIG]           = handle_ept_misconfig,
+    // 执行了暂停指令
     [EXIT_REASON_PAUSE_INSTRUCTION]       = handle_pause,
     [EXIT_REASON_MWAIT_INSTRUCTION]          = handle_invalid_op,
     [EXIT_REASON_MONITOR_INSTRUCTION]     = handle_invalid_op,
