--- Auto-Git Commit ---

--- a/Virtualization/QEMU/2. Init/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/QEMU/2. Init/2. 虚拟机创建流程 - qemu篇.md
@@ -19,7 +19,7 @@
   - [3.7. 初始化block](#37-初始化block)
   - [3.8. 判断是否使用默认配置](#38-判断是否使用默认配置)
   - [3.9. 解析命令行参数](#39-解析命令行参数)
-  - [3.10. 初始化main\_loop](#310-初始化main_loop)
+  - [3.10. 初始化main_loop](#310-初始化main_loop)
     - [3.10.1. 初始化时钟](#3101-初始化时钟)
     - [3.10.2. 注册信号处理函数](#3102-注册信号处理函数)
     - [3.10.3. 为fd申请内存](#3103-为fd申请内存)
@@ -402,7 +402,7 @@ bdrv_init_with_whitelist();
 static QemuOptsList *vm_config_groups[48];
 ```
 
-## 3.10. 初始化main\_loop
+## 3.10. 初始化main_loop
 
 初始化main loop, 还没真正进入main loop
 
@@ -817,3 +817,5 @@ main_loop是一个**死循环**，通过**内核**的**epoll机制**监听上面
 上: https://sq.163yun.com/blog/article/175668619278782464
 
 下: https://sq.163yun.com/blog/article/175669179507773440
+
+https://www.cnblogs.com/Bozh/p/5753379.html (还没整理)
