--- a/Virtualization/KVM/1. Summary/1. 基本原理.md
+++ b/Virtualization/KVM/1. Summary/1. 基本原理.md
@@ -9,6 +9,7 @@
 - [2. KVM工作原理](#2-kvm工作原理)
 - [3. CPU虚拟化](#3-cpu虚拟化)
 - [4. Mem虚拟化](#4-mem虚拟化)
+- [IO虚拟化](#io虚拟化)
 - [5. 参考](#5-参考)
 
 <!-- /code_chunk_output -->
@@ -175,6 +176,10 @@ VMM调度guest执行时，qemu 通过 ioctl [系统调用](http://oenhan.com/ker
 
 当 guest OS 执行一些特权指令或者外部事件时，比如I/O访问，对控制寄存器的操作，MSR的读写等， 都会导致物理CPU发生 VMExit， 停止运行 Guest OS，将 Guest OS保存到VMCS中，Host 状态装入物理处理器中， 处理器进入根操作环境，KVM取得控制权，通过读取 VMCS 中 VM_EXIT_REASON 字段得到引起 VM Exit 的原因。 从而调用kvm_exit_handler 处理函数。 如果由于 I/O 获得信号到达，则退出到userspace模式的 Qemu 处理。处理完毕后，重新进入guest模式运行虚拟 CPU。
 
+guest的所有用户级别(user)的指令集，都会直接由宿主机线程执行，此线程会调用KVM的ioctl方式提供的接口加载guest的指令并在特殊的CPU模式下运行，不需要经过CPU指令集的软件模拟转换，大大的减少了虚拟化成本，这也是KVM优于其他虚拟化方式的点之一。
+
+KVM向外提供了一个虚拟设备/dev/kvm，通过ioctl(IO设备带外管理接口）来对KVM进行操作，包括虚拟机的初始化，分配内存，指令加载等等。
+
 # 4. Mem虚拟化
 
 OS对于物理内存主要有两点认识：1.物理地址从0开始；2.[内存地址](http://www.oenhan.com/kernel-program-exec)是连续的。
@@ -184,6 +189,12 @@ VMM接管了所有内存，但guest OS的对内存的使用就存在这两点冲
 在OS代码中，应用也是占用所有的逻辑地址，同时不影响其他应用的关键点在于有线性地址这个中间层；解决方法则是添加了一个中间层：**guest物理地址空间**；guest看到是从0开始的guest物理地址空间（类比从0开始的线性地址），而且是连续的，虽然有些地址没有映射；同时guest物理地址映射到不同的host逻辑地址，如此保证了VM之间的安全性要求。
 
 这样MEM虚拟化就是GVA\->GPA\->HPA的寻址过程，传统软件方法有**影子页表**，硬件虚拟化提供了EPT支持。
+
+guest的内存在host上由emulator提供，对emulator来说，guest访问的内存就是他的虚拟地址空间，guest上需要经过一次虚拟地址到物理地址的转换，转换到guest的物理地址其实也就是emulator的虚拟地址，emulator再次经过一次转换，转换为host的物理地址。后面会有介绍各种虚拟化的优化手段，这里只是做一个overview。
+
+# IO虚拟化
+
+guest作为一个进程存在，当然他的内核的所有驱动等都存在，只是硬件被QEMU所模拟（后面介绍virtio的时候特殊)。guest的所有硬件操作都会有QEMU来接管，QEMU负责与真实的宿主机硬件打交道。
 
 # 5. 参考
 
