--- a/Virtualization/KVM/1. Summary/5. 虚拟机启动Demo.md
+++ b/Virtualization/KVM/1. Summary/5. 虚拟机启动Demo.md
@@ -38,6 +38,227 @@ ioctl(kvm->vcpus->vcpu_fd, KVM_RUN, 0);
 
 这里的退出并不一定是虚拟机关机，虚拟机如果遇到IO操作，访问硬件设备，缺页中断等都会退出执行，退出执行可以理解为将CPU执行上下文返回到QEMU。
 
+```cpp
+open("/dev/kvm")
+ioctl(KVM_CREATE_VM)
+ioctl(KVM_CREATE_VCPU)
+for (;;) {
+     ioctl(KVM_RUN)
+     switch (exit_reason) {
+     case KVM_EXIT_IO:  /* ... */
+     case KVM_EXIT_HLT: /* ... */
+     }
+}
+```
+
+关于`KVM_CREATE_VM`参数的描述，创建的VM是没有cpu和内存的，需要QEMU进程利用mmap系统调用映射一块内存给VM的描述符，其实也就是给VM创建内存的过程。
+
+参见: https://github.com/torvalds/linux/blob/master/Documentation/virt/kvm/api.rst
+
+# KVM API开胃菜
+
+下面是一个KVM的简单demo，其目的在于加载 code 并使用KVM运行起来.
+
+这是一个at&t的8086汇编，.code16表示他是一个16位的，当然直接运行是运行不起来的，为了让他运行起来，我们可以用KVM提供的API，将这个程序看做一个最简单的操作系统，让其运行起来。
+
+这个汇编的作用是输出al寄存器的值到0x3f8端口。对于x86架构来说，通过IN/OUT指令访问。PC架构一共有65536个8bit的I/O端口，组成64KI/O地址空间，编号从0~0xFFFF。连续两个8bit的端口可以组成一个16bit的端口，连续4个组成一个32bit的端口。I/O地址空间和CPU的物理地址空间是两个不同的概念，例如I/O地址空间为64K，一个32bit的CPU物理地址空间是4G。
+
+最终程序理想的输出应该是，al，bl的值后面KVM初始化的时候有赋值。
+
+4\n (并不直接输出\n，而是换了一行），hlt 指令表示虚拟机退出
+
+```assembly
+.globl _start
+    .code16
+_start:
+	mov $0x3f8, %dx
+    add %bl, %al
+    add $'0', %al
+	out %al, (%dx)
+	mov $'\n', %al
+	out %al, (%dx)
+	hlt
+```
+
+我们编译一下这个汇编，得到一个 Bin.bin 的二进制文件
+
+```
+as -32 bin.S -o bin.o
+ld -m elf_i386 --oformat binary -N -e _start -Ttext 0x10000 -o Bin.bin bin.o
+```
+
+查看一下二进制格式
+
+```
+➜  demo1 hexdump -C bin.bin
+00000000  ba f8 03 00 d8 04 30 ee  b0 0a ee f4              |......0.....|
+0000000c
+对应了下面的code数组，这样直接加载字节码就不需要再从文件加载了
+    const uint8_t code[] = {
+        0xba, 0xf8, 0x03, /* mov $0x3f8, %dx */
+        0x00, 0xd8,       /* add %bl, %al */
+        0x04, '0',        /* add $'0', %al */
+        0xee,             /* out %al, (%dx) */
+        0xb0, '\n',       /* mov $'\n', %al */
+        0xee,             /* out %al, (%dx) */
+        0xf4,             /* hlt */
+    };
+```
+
+```cpp
+#include <err.h>
+#include <fcntl.h>
+#include <linux/kvm.h>
+#include <stdint.h>
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#include <sys/ioctl.h>
+#include <sys/mman.h>
+#include <sys/stat.h>
+#include <sys/types.h>
+
+int main(void)
+{
+    int kvm, vmfd, vcpufd, ret;
+    const uint8_t code[] = {
+        0xba, 0xf8, 0x03, /* mov $0x3f8, %dx */
+        0x00, 0xd8,       /* add %bl, %al */
+        0x04, '0',        /* add $'0', %al */
+        0xee,             /* out %al, (%dx) */
+        0xb0, '\n',       /* mov $'\n', %al */
+        0xee,             /* out %al, (%dx) */
+        0xf4,             /* hlt */
+    };
+    uint8_t *mem;
+    struct kvm_sregs sregs;
+    size_t mmap_size;
+    struct kvm_run *run;
+    
+    // 获取 kvm 句柄
+    kvm = open("/dev/kvm", O_RDWR | O_CLOEXEC);
+    if (kvm == -1)
+        err(1, "/dev/kvm");
+
+    // 确保是正确的 API 版本
+    ret = ioctl(kvm, KVM_GET_API_VERSION, NULL);
+    if (ret == -1)
+        err(1, "KVM_GET_API_VERSION");
+    if (ret != 12)
+        errx(1, "KVM_GET_API_VERSION %d, expected 12", ret);
+    
+    // 创建一虚拟机
+    vmfd = ioctl(kvm, KVM_CREATE_VM, (unsigned long)0);
+    if (vmfd == -1)
+        err(1, "KVM_CREATE_VM");
+    
+    // 为这个虚拟机申请内存，并将代码（镜像）加载到虚拟机内存中
+    mem = mmap(NULL, 0x1000, PROT_READ | PROT_WRITE, MAP_SHARED | MAP_ANONYMOUS, -1, 0);
+    if (!mem)
+        err(1, "allocating guest memory");
+    memcpy(mem, code, sizeof(code));
+
+    // 为什么从 0x1000 开始呢，因为页表空间的前4K是留给页表目录
+    struct kvm_userspace_memory_region region = {
+        .slot = 0,
+        .guest_phys_addr = 0x1000,
+        .memory_size = 0x1000,
+        .userspace_addr = (uint64_t)mem,
+    };
+    // 设置 KVM 的内存区域
+    ret = ioctl(vmfd, KVM_SET_USER_MEMORY_REGION, &region);
+    if (ret == -1)
+        err(1, "KVM_SET_USER_MEMORY_REGION");
+    
+    // 创建虚拟CPU
+    vcpufd = ioctl(vmfd, KVM_CREATE_VCPU, (unsigned long)0);
+    if (vcpufd == -1)
+        err(1, "KVM_CREATE_VCPU");
+
+    // 获取 KVM 运行时结构的大小
+    ret = ioctl(kvm, KVM_GET_VCPU_MMAP_SIZE, NULL);
+    if (ret == -1)
+        err(1, "KVM_GET_VCPU_MMAP_SIZE");
+    mmap_size = ret;
+    if (mmap_size < sizeof(*run))
+        errx(1, "KVM_GET_VCPU_MMAP_SIZE unexpectedly small");
+    // 将 kvm run 与 vcpu 做关联，这样能够获取到kvm的运行时信息
+    run = mmap(NULL, mmap_size, PROT_READ | PROT_WRITE, MAP_SHARED, vcpufd, 0);
+    if (!run)
+        err(1, "mmap vcpu");
+
+    // 获取特殊寄存器
+    ret = ioctl(vcpufd, KVM_GET_SREGS, &sregs);
+    if (ret == -1)
+        err(1, "KVM_GET_SREGS");
+    // 设置代码段为从地址0处开始，我们的代码被加载到了0x0000的起始位置
+    sregs.cs.base = 0;
+    sregs.cs.selector = 0;
+    // KVM_SET_SREGS 设置特殊寄存器
+    ret = ioctl(vcpufd, KVM_SET_SREGS, &sregs);
+    if (ret == -1)
+        err(1, "KVM_SET_SREGS");
+
+    
+    // 设置代码的入口地址，相当于32位main函数的地址，这里16位汇编都是由0x1000处开始。
+    // 如果是正式的镜像，那么rip的值应该是类似引导扇区加载进来的指令
+    struct kvm_regs regs = {
+        .rip = 0x1000,
+        .rax = 2,    // 设置 ax 寄存器初始值为 2
+        .rbx = 2,    // 同理
+        .rflags = 0x2,   // 初始化flags寄存器，x86架构下需要设置，否则会粗错
+    };
+    ret = ioctl(vcpufd, KVM_SET_REGS, &regs);
+    if (ret == -1)
+        err(1, "KVM_SET_REGS");
+
+    // 开始运行虚拟机，如果是qemu-kvm，会用一个线程来执行这个vCPU，并加载指令
+    while (1) {
+        // 开始运行虚拟机
+        ret = ioctl(vcpufd, KVM_RUN, NULL);
+        if (ret == -1)
+            err(1, "KVM_RUN");
+        // 获取虚拟机退出原因
+        switch (run->exit_reason) {
+        case KVM_EXIT_HLT:
+            puts("KVM_EXIT_HLT");
+            return 0;
+        // 汇编调用了 out 指令，vmx 模式下不允许执行这个操作，所以
+        // 将操作权切换到了宿主机，切换的时候会将上下文保存到VMCS寄存器
+        // 后面CPU虚拟化会讲到这部分
+        // 因为虚拟机的内存宿主机能够直接读取到，所以直接在宿主机上获取到
+        // 虚拟机的输出（out指令），这也是后面PCI设备虚拟化的一个基础，DMA模式的PCI设备
+        case KVM_EXIT_IO:
+            if (run->io.direction == KVM_EXIT_IO_OUT && run->io.size == 1 && run->io.port == 0x3f8 && run->io.count == 1)
+                putchar(*(((char *)run) + run->io.data_offset));
+            else
+                errx(1, "unhandled KVM_EXIT_IO");
+            break;
+        case KVM_EXIT_FAIL_ENTRY:
+            errx(1, "KVM_EXIT_FAIL_ENTRY: hardware_entry_failure_reason = 0x%llx",
+                 (unsigned long long)run->fail_entry.hardware_entry_failure_reason);
+        case KVM_EXIT_INTERNAL_ERROR:
+            errx(1, "KVM_EXIT_INTERNAL_ERROR: suberror = 0x%x", run->internal.suberror);
+        default:
+            errx(1, "exit_reason = 0x%x", run->exit_reason);
+        }
+    }
+}
+```
+
+编译并运行这个demo
+
+```
+gcc -g demo.c -o demo
+➜  demo1 ./demo
+4
+KVM_EXIT_HLT
+```
+
+# 另外一个简单的QEMU emulator demo
+
+
+
 # 参考
 
 https://www.cnblogs.com/Bozh/p/5753379.html
