--- a/Virtualization/KVM/1. Summary/5. 利用KVM虚拟机启动Demo.md
+++ b/Virtualization/KVM/1. Summary/5. 利用KVM虚拟机启动Demo.md
@@ -1,5 +1,17 @@
 
-# 虚拟机启动过程
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. 虚拟机启动过程](#1-虚拟机启动过程)
+- [2. KVM API开胃菜](#2-kvm-api开胃菜)
+- [3. 另外一个简单的QEMU emulator demo](#3-另外一个简单的qemu-emulator-demo)
+- [4. 总结](#4-总结)
+- [5. 参考](#5-参考)
+
+<!-- /code_chunk_output -->
+
+# 1. 虚拟机启动过程
 
 第一步，获取到kvm句柄
 
@@ -55,7 +67,7 @@ for (;;) {
 
 参见: https://github.com/torvalds/linux/blob/master/Documentation/virt/kvm/api.rst
 
-# KVM API开胃菜
+# 2. KVM API开胃菜
 
 下面是一个KVM的简单demo，其目的在于加载 code 并使用KVM运行起来.
 
@@ -255,7 +267,7 @@ gcc -g demo.c -o demo
 KVM_EXIT_HLT
 ```
 
-# 另外一个简单的QEMU emulator demo
+# 3. 另外一个简单的QEMU emulator demo
 
 使用KVM API实现Emulator Demo: http://soulxu.github.io/blog/2014/08/11/use-kvm-api-write-emulator/ , 代码在: https://github.com/haiwei-li/kvmsample
 
@@ -633,13 +645,13 @@ out port: 16, data: 4
 ...
 ```
 
-# 总结
+# 4. 总结
 
 虚拟机的启动过程基本上可以这么总结：
 创建kvm句柄->创建vm->分配内存->加载镜像到内存->启动线程执行KVM_RUN。从这个虚拟机的demo可以看出，虚拟机的内存是由宿主机通过mmap调用映射给虚拟机的，而vCPU是宿主机的一个线程，这个线程通过设置相应的vCPU的寄存器指定了虚拟机的程序加载地址后，开始运行虚拟机的指令，当虚拟机执行了IO操作后，CPU捕获到中断并把执行权又交回给宿主机。
 
 当然真实的qemu-kvm比这个复杂的多，包括设置很多IO设备的MMIO，设置信号处理等。
 
-# 参考
+# 5. 参考
 
 https://www.cnblogs.com/Bozh/p/5753379.html
