--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
@@ -5,10 +5,10 @@
 
 - [1. APIC timer组成](#1-apic-timer组成)
 - [2. LVT timer寄存器](#2-lvt-timer寄存器)
-  - [2.1. 计数模式](#21-计数模式)
-    - [2.1.1. one-shot计数模式(一次性)](#211-one-shot计数模式一次性)
-    - [2.1.2. Periodic计数模式(定期)](#212-periodic计数模式定期)
-    - [2.1.3. TSC-deadline计数模式(到达TSC值)](#213-tsc-deadline计数模式到达tsc值)
+- [3. 计数模式](#3-计数模式)
+    - [3.1. one-shot计数模式(一次性)](#31-one-shot计数模式一次性)
+    - [3.2. Periodic计数模式(定期)](#32-periodic计数模式定期)
+    - [3.3. TSC-deadline计数模式(到达TSC值)](#33-tsc-deadline计数模式到达tsc值)
 
 <!-- /code_chunk_output -->
 
@@ -16,11 +16,11 @@
 
 local APIC的**timer**是非常简单易用的。它由以下**4个部分组成**。
 
-① LVT timer寄存器。
+① **LVT timer**寄存器。
 
-② Initial\-count（初始计数器）寄存器。
+② Initial\-count（**初始计数器**）寄存器。
 
-③ Current\-count（当前计数器）寄存器。
+③ Current\-count（**当前计数器**）寄存器。
 
 ④ Divide configuration（**clock频率配置**）寄存器。
 
@@ -30,7 +30,7 @@ Divide configuration寄存器用来**配置timer计数的时钟频率**，和tim
 
 Timer的计数频率使用**system bus频率除以上图所列出来的值**，当配置使用除1时，将使用与**TSC（time\-stamp counter**）及**IA32\_FIXED\_CTR2计数器相同的计数频率**。这个寄存器的初始值为0，即使用system bus频率除以2的计数频率。
 
-initial\-count与current\-count寄存器是32位寄存器，在**开始计数时**，**软件**需要在**Initial\-count（初始计数）寄存器**提供一个非0值的初始计数值。一旦设置初始计数值，local APIC会将**初始计数值**复制到**只读**的**current\-count（当前计数）寄存器**里。
+initial\-count与current\-count寄存器是32位寄存器，在**开始计数时**，**软件**需要在**Initial\-count（初始计数）寄存器**提供一个**非0值**的初始计数值。一旦设置初始计数值，local APIC会将**初始计数值**复制到**只读**的**current\-count（当前计数）寄存器**里。
 
 current\-count寄存器的值开始**减1，直至为0值**。current\-count减为0时产生**timer中断**。APIC timer支持**三种计数模式**，在LVT timer寄存器里设置。
 
@@ -44,7 +44,7 @@ LVT timer寄存器属于7个local vector table寄存器之一。
 
 LVT timer**只能使用Fixed delivery模式和edge触发**，并且**必须提供一个vector值**。
 
-## 2.1. 计数模式
+# 3. 计数模式
 
 LVT timer提供了三种计数模式。
 
@@ -54,7 +54,7 @@ LVT timer提供了三种计数模式。
 
 ③ TSC\-deadline（达到TSC值）计数模式。
 
-### 2.1.1. one-shot计数模式(一次性)
+### 3.1. one-shot计数模式(一次性)
 
 在one\-shot模式里，当current\-count的值减为0时，产生**timer中断**，**current\-count的值维持在0不变**，除非**写入新的initial\-count值**。
 
@@ -67,7 +67,7 @@ LVT timer提供了三种计数模式。
 
 上面的代码向**LVT timer寄存器**写入设置的值使用了one\-shot模式。**initial\-count寄存器**被写入256值。一旦写入initial\-count值，APIC timer就开始计数。
 
-### 2.1.2. Periodic计数模式(定期)
+### 3.2. Periodic计数模式(定期)
 
 使用periodic计数模式，当**current\-count**减为0时，产生**timer中断**。local APIC将在current\-count寄存器里装入initial\-count值**重新开始计数**，从而**周期性**地产生timer中断，除非写入0值到initial\-count寄存器里。
 
@@ -80,7 +80,7 @@ LVT timer提供了三种计数模式。
 
 当写入新的initial\-count值时，local APIC将重新装入新的initial\-count值进行计数。
 
-### 2.1.3. TSC-deadline计数模式(到达TSC值)
+### 3.3. TSC-deadline计数模式(到达TSC值)
 
 当`CPUID.01：ECX[24]`为1时，APIC timer允许使用TSC\-deadline计数模式。
 
