--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -858,14 +858,14 @@ static long kvm_vcpu_ioctl(struct file *filp,
 
 **执行vCPU**的请求首先发送到**kvm\_vcpu\_ioctl函数**中，然后**加载vCPU参数**，调用**kvm\_arch\_vcpu\_ioctl\_run**函数进入**具体的vCPU运行**环节。(arch/x86/kvm/x86.c)
 
-```
+```cpp
 kvm_arch_vcpu_ioctl_run()                	// vcpu运行
  ├─vcpu_load(vcpu)                          // 加载vcpu信息, 见前面
  ├─kvm_sigset_activate(vcpu)                // 信号屏蔽, 防止干扰
  ├─kvm_load_guset_fpu()         			//  加载虚拟机的fpu
  |	├─kvm_save_current_fpu(vcpu->arch.user_fpu); // 将当前进程的fpu赋值给vcpu
  ├─vcpu_run()            					// 死循环进入vcpu_enter_guest
- |	├─for(;;)       // 循环受vcpu_enter_guest()返回值/系统信号控制, 只有异常/有外部信号才退出循环
+ |	├─for(;;)                               // 循环受vcpu_enter_guest()返回值/系统信号控制, 只有异常/有外部信号才退出循环
  |	|   ├─vcpu_enter_guest()                	// 物理CPU进入guest状态
  |	|	|   ├─kvm_check_requests()  			// 处理 vcpu->requests, 每个有相应处理
  |	|	|   ├─kvm_mmu_reload(vcpu);  			// 加载mmu
