--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/1. 基本原理.md
+++ b/Virtualization/KVM/3. CPU虚拟化/1. 基本原理.md
@@ -7,8 +7,9 @@
 - [2. VMM 与 guest的切换](#2-vmm-与-guest的切换)
 - [3. VMM 的生命周期](#3-vmm-的生命周期)
 - [4. VMCS(Virtual-Machine control structure)](#4-vmcsvirtual-machine-control-structure)
-- [5. VM-Entry/VM-Exit](#5-vm-entryvm-exit)
-- [6. 参考](#6-参考)
+- [5. VM-Entry](#5-vm-entry)
+- [6. VM-Exit](#6-vm-exit)
+- [7. 参考](#7-参考)
 
 <!-- /code_chunk_output -->
 
@@ -63,7 +64,7 @@ VMCS下有一些**控制域**：
 
 关于具体控制域的细节，还是翻Intel手册吧。
 
-# 5. VM-Entry/VM-Exit
+# 5. VM-Entry
 
 `VM-Entry`是从根模式切换到非根模式，即VMM切换到guest上，这个状态由**VMM发起**，**发起之前**先保存**VMM中的关键寄存器**内容到**VMCS**中，然后进入到VM-Entry，`VM-Entry`附带**参数主要有3个**：
 
@@ -72,6 +73,10 @@ VMCS下有一些**控制域**：
 3. **注入事件**。
 
 1应该**只在VMLAUCH有意义**，3更多是在**VMRESUME**，而VMM发起`VM-Entry`更多是因为3，2主要用来**每次更新MSR**。
+
+第一次启动Guest，通过VMLAUNCH指令加载Guest，这时候一切都是新的，比如说起始的rip寄存器等。 后续Guest exit后再entry，是通过VMRESUME指令，此指令会将VMCS所指向的内容加载到当前Guest的上下文， 以便Guest继续执行。
+
+# 6. VM-Exit
 
 `VM-Exit`是CPU从**非根模式**切换到**根模式**，从guest切换到VMM的操作，`VM-Exit`触发的原因就很多了，执行**敏感指令**，[**发生中断**](http://www.oenhan.com/rwsem-realtime-task-hung)，**模拟特权资源**等。
 
@@ -92,6 +97,8 @@ VMCS下有一些**控制域**：
 
 `VM-Exit`发生时退出的相关信息，如退出原因、触发中断等，这些内容保存在`VM-Exit`**信息域**中。
 
-# 6. 参考
+Guest OS运行在VMX non-root模式中，当执行默写特权执行时，则会引发VM Exit。Guest Exit Reason保存在MSR寄存器中。 `arch/x86/kvm/vmx.c:kvm_vmx_exit_handlers` 定义了guest Exit的**内核处理函数**。 例如 `[EXIT_REASON_CR_ACCESS] = handle_cr`, 当Guest OS访问cr寄存器时，即会产生 VM Exit，将控制权交予kvm，调用`handle_cr`处理。对应到**KVM**就是`vCPU->kvm_run->exit_reason`。KVM根据`exit_reason`做相应的处理。 **VM Exit退出的代码**是`vmx.c:vmx_vcpu_run`函数**后半段开始执行**，执行路径与vm entry相反，一层层回调处理到qemu-kvm中的kvm_exec_cpu
+
+# 7. 参考
 
 http://oenhan.com/kvm-src-3-cpu
