--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -988,3 +988,11 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
 4）在5286～5289行中，如果对当前执行的vCPU需要调度，会引用Linux的进程调度子程序进行一次任务调度。
 
 在上面的执行流程中，最重要的执行在 **vcpu\_enter\_guest** 函数中，该函数实现了**进入客户机**并且**执行具体指令**的操作。
+
+
+
+Guest OS运行在VMX non-root模式中，当执行默写特权执行时，则会引发VM Exit。Guest Exit Reason保存在MSR寄存器中。 `arch/x86/kvm/vmx.c:kvm_vmx_exit_handlers` 定义了guest Exit的**内核处理函数**。 例如 `[EXIT_REASON_CR_ACCESS] = handle_cr`, 当Guest OS访问cr寄存器时，即会产生 VM Exit，将控制权交予kvm，调用`handle_cr`处理。对应到**KVM**就是`vCPU->kvm_run->exit_reason`。KVM根据`exit_reason`做相应的处理。 
+
+**VM Exit退出的代码**是`vmx.c:vmx_vcpu_run`函数**后半段开始执行**，执行路径与**vm entry相反**，一层层**回调处理**到qemu-kvm中的`kvm_exec_cpu`
+
+
