--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/3. 主要功能.md
+++ b/Virtualization/KVM/3. CPU虚拟化/3. 主要功能.md
@@ -576,7 +576,7 @@ vmx_complete_interrupts(vmx);
     r = kvm_x86_ops->handle_exit(vcpu);
 ```
 
-handle_exit退出函数由vmx_handle_exit实现，主要设置`vcpu->run->exit_reason`，让外部感知退出原因，并对应处理。对于vpu而言，`handle_exit`只是意味着一个传统linux一个时间片的结束，后续的工作都是由handle完成的，`handle_exit`对应的函数集如下：
+handle_exit退出函数由`vmx_handle_exit`实现，主要设置`vcpu->run->exit_reason`，让外部感知退出原因，并对应处理。对于vpu而言，`handle_exit`只是意味着一个传统linux一个时间片的结束，后续的工作都是由handle完成的，`handle_exit`对应的函数集如下：
 
 ```cpp
 static int (*kvm_vmx_exit_handlers[])(struct kvm_vcpu *vcpu) = {
