--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -811,6 +811,8 @@ static int init_kvm_mmu(struct kvm_vcpu *vcpu)
 
 ## 7.1. 基本原理
 
+**虚拟机**运行于**qemu-kvm的进程上下文**中，从**硬件的角度**看，**虚拟机的运行过程**，实质为**相关指令的执行过程**，**虚拟机编译**后的也就是相应的**CPU指令序列**，而**虚拟机的指令**跟**Host机的指令**执行过程并没有太多的差别，最关键的差别为"**敏感指令**"(通常为IO、内存等关键操作)的执行，这也是虚拟化实现的本质所在，当在**虚拟机**中(**Guest模式**)执行"**敏感指令**"时，会触发（由硬件触发）**VM-exit**，使当前CPU从**Guest模式**(non-root模式)切换到**root模式**，当前CPU的控制权随之转交给VMM(Hypervisor，KVM中即Host)，由VMM进行相应的处理，处理完成后再次通过应该硬件指令(如VMLAUNCH)，**重新进入到Guest模式**，从而进入虚拟机运行环境中继续运行。
+
 在创建完**VM**和**vCPU**并且完成了**初始化工作**之后，就可以通过**调度程序调度执行**。
 
 因为在Linux中，KVM虚拟机作为一个**系统线程**运行，因此，KVM虚拟机的调度程序实际上也就是Linux的调度程序，具体的调度将在后文qemu部分进行讨论，在当前，**KVM的调用**是从ioctl的**KVM\_RUN指令**字开始的。
