--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -889,7 +889,7 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
 
 1）通过调用**sigprocmask函数**，保证在**vCPU的初始化**过程中，不会因为来自**其他线程的信号干扰而中断**。
 
-2）将**vCPU的状态**切换为**KVM\_MP\_STATE\_UNINITIALIZED**。
+2）将**vCPU的状态**切换为`KVM_MP_STATE_UNINITIALIZED`。
 
 3）配置**APIC**和**mmio**的**中断信息**。
 
@@ -897,9 +897,9 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
 
 5）将**vCPU**中保存的**上下文信息（寄存器状态等**）写入指定的位置。
 
-6）接下来才开始实质性的工作，调用\_**vcpu\_run函数**进行后续处理。
+6）接下来才开始实质性的工作，调用`_vcpu_run`函数进行后续处理。
 
-\_vcpu\_run函数的代码如下。
+`_vcpu_run`函数的代码如下。
 
 代码5\-11 \_vcpu\_run函数
 
