--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -862,26 +862,26 @@ static long kvm_vcpu_ioctl(struct file *filp,
 
 ```cpp
 kvm_arch_vcpu_ioctl_run()                	// vcpu运行
- ├─vcpu_load(vcpu)                          // 加载vcpu信息, 见前面
- ├─kvm_sigset_activate(vcpu)                // 信号屏蔽, 防止干扰
- ├─kvm_load_guset_fpu()         			//  加载虚拟机的fpu
- |	├─kvm_save_current_fpu(vcpu->arch.user_fpu); // 将当前进程的fpu赋值给vcpu
- ├─vcpu_run()            					// 死循环进入vcpu_enter_guest
+ ├─ vcpu_load(vcpu)                          // 加载vcpu信息, 见前面
+ ├─ kvm_sigset_activate(vcpu)                // 信号屏蔽, 防止干扰
+ ├─ kvm_load_guset_fpu()         			//  加载虚拟机的fpu
+ |	├─ kvm_save_current_fpu(vcpu->arch.user_fpu); // 将当前进程的fpu赋值给vcpu
+ ├─ vcpu_run()            					// 死循环进入vcpu_enter_guest
  |	├─for(;;)                               // 循环受vcpu_enter_guest()返回值/系统信号控制, 只有异常/有外部信号才退出循环
- |	|   ├─vcpu_enter_guest()                	// 物理CPU进入guest状态
- |	|	|   ├─kvm_check_requests()  			// 处理 vcpu->requests, 每个有相应处理
- |	|	|   ├─kvm_mmu_reload(vcpu);  			// 加载mmu
- |	|	|   ├─kvm_x86_ops->prepare_guest_switch(vcpu); // 准备陷入到guest, 保存vmexit时加载的host状态
- |	|	|   ├─local_irq_disable();  			// 屏蔽中断响应，准备进入guest
- |	|	|   ├─vcpu->mode = IN_GUEST_MODE;  		// 将vcpu模式设为guest模式
- |	|	|   ├─guest_enter_irqoff();  			// 计算虚拟机系统时间和上下文切换
- |	|	|   ├─kvm_x86_ops->run(vcpu)  			// 开始运行guest, 会调用vmx_vcpu_run
- |	|	|   |   ├─__vmx_vcpu_run()  			// 调用汇编代码, vmlaunch
- |	|	|   |   ├─vmx_recover_nmi_blocking(vmx); // 恢复系统NMI中断
- |	|	|   |   ├─vmx_complete_interrupts(vmx); // 恢复中断
- |	|	|   ├─hw_breakpoint_restore()	// 恢复硬件断点
- |	|	|   ├─vcpu->mode = OUTSIDE_GUEST_MODE;	// vcpu mode
- |	|	|   ├─kvm_x86_ops->handle_exit(vcpu)	// vmexit的处理, 由vmx_handle_exit实现, 主要设置vcpu->run->exit_reason，让外部感知退出原因，并对应处理。
+ |	|   ├─ vcpu_enter_guest()                	// 物理CPU进入guest状态
+ |	|	|   ├─ kvm_check_requests()  			// 处理 vcpu->requests, 每个有相应处理
+ |	|	|   ├─ kvm_mmu_reload(vcpu);  			// 加载mmu
+ |	|	|   ├─ kvm_x86_ops->prepare_guest_switch(vcpu); // 准备陷入到guest, 保存vmexit时加载的host状态
+ |	|	|   ├─ local_irq_disable();  			// 屏蔽中断响应，准备进入guest
+ |	|	|   ├─ vcpu->mode = IN_GUEST_MODE;  		// 将vcpu模式设为guest模式
+ |	|	|   ├─ guest_enter_irqoff();  			// 计算虚拟机系统时间和上下文切换
+ |	|	|   ├─ kvm_x86_ops->run(vcpu)  			// 开始运行guest, 会调用vmx_vcpu_run
+ |	|	|   |   ├─ __vmx_vcpu_run()  			// 调用汇编代码, vmlaunch
+ |	|	|   |   ├─ vmx_recover_nmi_blocking(vmx); // 恢复系统NMI中断
+ |	|	|   |   ├─ vmx_complete_interrupts(vmx); // 恢复中断
+ |	|	|   ├─ hw_breakpoint_restore()	// 恢复硬件断点
+ |	|	|   ├─ vcpu->mode = OUTSIDE_GUEST_MODE;	// vcpu mode
+ |	|	|   ├─ kvm_x86_ops->handle_exit(vcpu)	// vmexit的处理, 由vmx_handle_exit实现, 主要设置vcpu->run->exit_reason，让外部感知退出原因，并对应处理。
  ├─         								// 
 ```
 
@@ -895,93 +895,70 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
 
 4）对要进入的虚拟机进行一些**关键指令的测试**，在测试中主要针对**内存读/写**情况进行测试。
 
-5）将**vCPU**中保存的**上下文信息（寄存器状态等**）写入指定的位置。
+5）将**vCPU**中保存的**上下文信息（寄存器状态等**）写入**指定的位置**。
 
-6）接下来才开始实质性的工作，调用`_vcpu_run`函数进行后续处理。
+6）接下来才开始实质性的工作，调用`vcpu_run`函数进行后续处理。
 
-`_vcpu_run`函数的代码如下。
-
-代码5\-11 \_vcpu\_run函数
+`vcpu_run`函数的代码如下。
 
 ```cpp
 // arch/x86/kvm/x86.c
-(5232)   static int __vcpu_run(struct kvm_vcpu *vcpu)
-(5233)   {
-(5234)        int r;
-(5235)        struct kvm *kvm = vcpu->kvm;
-(5236)
-(5237)        if (unlikely(vcpu->arch.mp_state == KVM_MP_STATE_SIPI_RECEIVED)) {
-(5238)             pr_debug("vcpu %d received sipi with vector # %x\n",
-(5239)                   vcpu->vcpu_id, vcpu->arch.sipi_vector);
-(5240)             kvm_lapic_reset(vcpu);
-(5241)             r = kvm_arch_vcpu_reset(vcpu);
-(5242)             if (r)
-(5243)                  return r;
-(5244)             vcpu->arch.mp_state = KVM_MP_STATE_RUNNABLE;
-(5245)        }
-(5246)
-(5247)        vcpu->srcu_idx = srcu_read_lock(&kvm->srcu);
-(5248)        vapic_enter(vcpu);
-(5249)
-(5250)        r = 1;
-(5251)        while (r > 0) {
-(5252)             if (vcpu->arch.mp_state == KVM_MP_STATE_RUNNABLE)
-(5253)                  r = vcpu_enter_guest(vcpu);
-(5254)             else {
-(5255)                  srcu_read_unlock(&kvm->srcu, vcpu->srcu_idx);
-(5256)                  kvm_vcpu_block(vcpu);
-(5257)                  vcpu->srcu_idx = srcu_read_lock(&kvm->srcu);
-(5258)                  if (kvm_check_request(KVM_REQ_UNHALT, vcpu))
-(5259)                  {
-(5260)                       switch(vcpu->arch.mp_state) {
-(5261)                       case KVM_MP_STATE_HALTED:
-(5262)                            vcpu->arch.mp_state =
-(5263)                                KVM_MP_STATE_RUNNABLE;
-(5264)                       case KVM_MP_STATE_RUNNABLE:
-(5265)                            break;
-(5266)                       case KVM_MP_STATE_SIPI_RECEIVED:
-(5267)                       default:
-(5268)                            r = -EINTR;
-(5269)                            break;
-(5270)                       }
-(5271)                  }
-(5272)             }
-(5273)
-(5274)             if (r <= 0)
-(5275)                  break;
-(5276)
-(5277)             clear_bit(KVM_REQ_PENDING_TIMER, &vcpu->requests);
-(5278)             if (kvm_cpu_has_pending_timer(vcpu))
-(5279)                  kvm_inject_pending_timer_irqs(vcpu);
-(5280)
-(5281)             if (dm_request_for_irq_injection(vcpu)) {
-(5282)                  r = -EINTR;
-(5283)                  vcpu->run->exit_reason = KVM_EXIT_INTR;
-(5284)                  ++vcpu->stat.request_irq_exits;
-(5285)             }
-(5286)             if (signal_pending(current)) {
-(5287)                  r = -EINTR;
-(5288)                  vcpu->run->exit_reason = KVM_EXIT_INTR;
-(5289)                  ++vcpu->stat.signal_exits;
-(5290)             }
-(5291)             if (need_resched()) {
-(5292)                  srcu_read_unlock(&kvm->srcu, vcpu->srcu_idx);
-(5293)                  kvm_resched(vcpu);
-(5294)                  vcpu->srcu_idx = srcu_read_lock(&kvm->srcu);
-(5295)             }
-(5296)        }
-(5297)
-(5298)        srcu_read_unlock(&kvm->srcu, vcpu->srcu_idx);
-(5299)
-(5300)        vapic_exit(vcpu);
-(5301)
-(5302)        return r;
-(5303)   }
+static int vcpu_run(struct kvm_vcpu *vcpu)
+{
+        int r;
+        struct kvm *kvm = vcpu->kvm;
+
+        vcpu->srcu_idx = srcu_read_lock(&kvm->srcu);
+        vcpu->arch.l1tf_flush_l1d = true;
+
+        for (;;) {
+                if (kvm_vcpu_running(vcpu)) {
+                        r = vcpu_enter_guest(vcpu);
+                } else {
+                        r = vcpu_block(kvm, vcpu);
+                }
+
+                if (r <= 0)
+                        break;
+
+                kvm_clear_request(KVM_REQ_PENDING_TIMER, vcpu);
+                if (kvm_cpu_has_pending_timer(vcpu))
+                        kvm_inject_pending_timer_irqs(vcpu);
+
+                if (dm_request_for_irq_injection(vcpu) &&
+                        kvm_vcpu_ready_for_interrupt_injection(vcpu)) {
+                        r = 0;
+                        vcpu->run->exit_reason = KVM_EXIT_IRQ_WINDOW_OPEN;
+                        ++vcpu->stat.request_irq_exits;
+                        break;
+                }
+
+                kvm_check_async_pf_completion(vcpu);
+
+                if (signal_pending(current)) {
+                        r = -EINTR;
+                        vcpu->run->exit_reason = KVM_EXIT_INTR;
+                        ++vcpu->stat.signal_exits;
+                        break;
+                }
+                if (need_resched()) {
+                        srcu_read_unlock(&kvm->srcu, vcpu->srcu_idx);
+                        cond_resched();
+                        vcpu->srcu_idx = srcu_read_lock(&kvm->srcu);
+                }
+        }
+
+        srcu_read_unlock(&kvm->srcu, vcpu->srcu_idx);
+
+        return r;
+}
 ```
+
+`vcpu_run`最终调用`vcpu_enter_guest`，该函数实现了进入Guest，并执行Guest OS具体指令的操作。
 
 该函数较长，执行的内容也比较重要，重要的部分如下。
 
-1）在5232～5240行中，将**虚拟APIC**和**vCPU**的状态**重置**。这个操作通过调用kvm\_lapic\_reset和kvm\_arch\_vcpu\_reset函数实现。
+1）在5232～5240行中，将**虚拟APIC**和**vCPU**的状态**重置**。这个操作通过调用`kvm_lapic_reset`和`kvm_arch_vcpu_reset`函数实现。
 
 2）在5245～5270行中，正常情况下，将kvm\_vcp\-\>arch.mp\_state的取值作为**单机未运行的取值**：`KVM_MP_STATE_RUNNABLE`；如果 vCPU 在 VM 中处于**其他状态**，则会**出错**。在运行中有一个**循环**，直到确认了**vcpu\_enter\_guest**函数执行完毕，即**物理CPU进入了GUEST状态**并且执行完成后，才会执行下一步操作。
 
