--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -842,6 +842,9 @@ static long kvm_vcpu_ioctl(struct file *filp,
 }
 ```
 
+`kvm_vcpu_ioctl`是kvm ioctl VCPU指令的入口，传入的fd为`KVM_CREATE_VCPU`中**返回的fd**。主要针对**具体的VCPU**进行**参数设置**。如：相关寄存器的读、写、中断控制等
+
+
 **KVM\_RUN指令字**针对**fd\_vcpu描述符**操作，当**vCPU准备完成**之后，即可通过该指令让虚拟机运行起来。
 
 **虚拟机运行**的主要任务则是进行**上下文切换**。上下文切换的内容较多，通常包括**通用寄存器**、**浮点寄存器**、**段寄存器**、**控制寄存器**、**MSR**等，在**KVM**中，还包括**APIC状态**、**TLB**等。
@@ -862,7 +865,7 @@ static long kvm_vcpu_ioctl(struct file *filp,
 
 ```cpp
 kvm_arch_vcpu_ioctl_run()                	// vcpu运行
- ├─ vcpu_load(vcpu)                          // 加载vcpu信息, 见前面
+ ├─ vcpu_load(vcpu)                          //  KVM虚拟机VCPU数据结构载入物理CPU
  ├─ kvm_sigset_activate(vcpu)                // 信号屏蔽, 防止干扰
  ├─ kvm_load_guset_fpu()         			//  加载虚拟机的fpu
  |	├─ kvm_save_current_fpu(vcpu->arch.user_fpu); // 将当前进程的fpu赋值给vcpu
@@ -886,6 +889,77 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
 ```
 
 ## 7.3. 代码分析
+
+```cpp
+int kvm_arch_vcpu_ioctl_run(struct kvm_vcpu *vcpu, struct kvm_run *kvm_run)
+{
+        int r;
+        // KVM虚拟机VCPU数据结构载入物理CPU
+        vcpu_load(vcpu);
+        kvm_sigset_activate(vcpu);
+        kvm_load_guest_fpu(vcpu);
+
+        if (unlikely(vcpu->arch.mp_state == KVM_MP_STATE_UNINITIALIZED)) {
+                if (kvm_run->immediate_exit) {
+                        r = -EINTR;
+                        goto out;
+                }
+                kvm_vcpu_block(vcpu);
+                kvm_apic_accept_events(vcpu);
+                kvm_clear_request(KVM_REQ_UNHALT, vcpu);
+                r = -EAGAIN;
+                if (signal_pending(current)) {
+                        r = -EINTR;
+                        vcpu->run->exit_reason = KVM_EXIT_INTR;
+                        ++vcpu->stat.signal_exits;
+                }
+                goto out;
+        }
+
+        if (vcpu->run->kvm_valid_regs & ~KVM_SYNC_X86_VALID_FIELDS) {
+                r = -EINVAL;
+                goto out;
+        }
+
+        if (vcpu->run->kvm_dirty_regs) {
+                r = sync_regs(vcpu);
+                if (r != 0)
+                        goto out;
+        }
+
+        /* re-sync apic's tpr */
+        if (!lapic_in_kernel(vcpu)) {
+                if (kvm_set_cr8(vcpu, kvm_run->cr8) != 0) {
+                        r = -EINVAL;
+                        goto out;
+                }
+        }
+
+        if (unlikely(vcpu->arch.complete_userspace_io)) {
+                int (*cui)(struct kvm_vcpu *) = vcpu->arch.complete_userspace_io;
+                vcpu->arch.complete_userspace_io = NULL;
+                r = cui(vcpu);
+                if (r <= 0)
+                        goto out;
+        } else
+                WARN_ON(vcpu->arch.pio.count || vcpu->mmio_needed);
+
+        if (kvm_run->immediate_exit)
+                r = -EINTR;
+        else
+                r = vcpu_run(vcpu);
+
+out:
+        kvm_put_guest_fpu(vcpu);
+        if (vcpu->run->kvm_valid_regs)
+                store_regs(vcpu);
+        post_kvm_run_save(vcpu);
+        kvm_sigset_deactivate(vcpu);
+
+        vcpu_put(vcpu);
+        return r;
+}
+```
 
 1）通过调用**sigprocmask函数**，保证在**vCPU的初始化**过程中，不会因为来自**其他线程的信号干扰而中断**。
 
@@ -954,20 +1028,13 @@ static int vcpu_run(struct kvm_vcpu *vcpu)
 }
 ```
 
-`vcpu_run`最终调用`vcpu_enter_guest`，该函数实现了进入Guest，并执行Guest OS具体指令的操作。
+`vcpu_run`最终调用`vcpu_enter_guest`，该函数实现了**进入Guest**，并执行**Guest OS具体指令**的操作。对应于Intel平台，该函数为`vmx_vcpu_run`(设置**Guest CR3**和**其他寄存器**、**EPT/影子页表相关设置**、汇编代码VMLAUNCH切换到非根模式，执行Guest目标代码)。
 
-该函数较长，执行的内容也比较重要，重要的部分如下。
+Guest代码执行到**敏感指令**或因**其他原因**(比如中断/异常)，**VM-Exit退出非根模式**，返回到`vcpu_enter_guest`函数继续执行。
 
-1）在5232～5240行中，将**虚拟APIC**和**vCPU**的状态**重置**。这个操作通过调用`kvm_lapic_reset`和`kvm_arch_vcpu_reset`函数实现。
+vcpu_enter_guest函数中会判断VM-Exit原因，并进行相应处理。
 
-2）在5245～5270行中，正常情况下，将kvm\_vcp\-\>arch.mp\_state的取值作为**单机未运行的取值**：`KVM_MP_STATE_RUNNABLE`；如果 vCPU 在 VM 中处于**其他状态**，则会**出错**。在运行中有一个**循环**，直到确认了**vcpu\_enter\_guest**函数执行完毕，即**物理CPU进入了GUEST状态**并且执行完成后，才会执行下一步操作。
-
-3）在5273～5278行中，将检查本次执行的一些结果。如果CPU当前有挂起的定时器或者其他中断，则会保存该中断的现场。
-
-4）在5286～5289行中，如果对当前执行的vCPU需要调度，会引用Linux的进程调度子程序进行一次任务调度。
-
-在上面的执行流程中，最重要的执行在 **vcpu\_enter\_guest** 函数中，该函数实现了**进入客户机**并且**执行具体指令**的操作。
-
+处理完成后VM-Entry到Guest重新执行Guest代码，或重新等待下次调度。
 
 
 Guest OS运行在VMX non-root模式中，当执行默写特权执行时，则会引发VM Exit。Guest Exit Reason保存在MSR寄存器中。 `arch/x86/kvm/vmx.c:kvm_vmx_exit_handlers` 定义了guest Exit的**内核处理函数**。 例如 `[EXIT_REASON_CR_ACCESS] = handle_cr`, 当Guest OS访问cr寄存器时，即会产生 VM Exit，将控制权交予kvm，调用`handle_cr`处理。对应到**KVM**就是`vCPU->kvm_run->exit_reason`。KVM根据`exit_reason`做相应的处理。 
