--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -871,7 +871,7 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
  |	├─ kvm_save_current_fpu(vcpu->arch.user_fpu); // 将当前进程的fpu赋值给vcpu
  ├─ vcpu_run()            					// 死循环进入vcpu_enter_guest
  |	├─for(;;)                               // 循环受vcpu_enter_guest()返回值/系统信号控制, 只有异常/有外部信号才退出循环
- |	|   ├─ vcpu_enter_guest()                	// 物理CPU进入guest状态
+ |	|   ├─ vcpu_enter_guest()                	// 物理CPU进入guest模式
  |	|	|   ├─ kvm_check_requests()  			// 处理 vcpu->requests, 每个有相应处理
  |	|	|   ├─ kvm_mmu_reload(vcpu);  			// 加载mmu
  |	|	|   ├─ kvm_x86_ops->prepare_guest_switch(vcpu); // 准备陷入到guest, 保存vmexit时加载的host状态
@@ -879,7 +879,7 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
  |	|	|   ├─ vcpu->mode = IN_GUEST_MODE;  		// 将vcpu模式设为guest模式
  |	|	|   ├─ guest_enter_irqoff();  			// 计算虚拟机系统时间和上下文切换
  |	|	|   ├─ kvm_x86_ops->run(vcpu)  			// 开始运行guest, 会调用vmx_vcpu_run
- |	|	|   |   ├─ __vmx_vcpu_run()  			// 调用汇编代码, vmlaunch
+ |	|	|   |   ├─ __vmx_vcpu_run()  			// 调用汇编代码, vmlaunch指令
  |	|	|   |   ├─ vmx_recover_nmi_blocking(vmx); // 恢复系统NMI中断
  |	|	|   |   ├─ vmx_complete_interrupts(vmx); // 恢复中断
  |	|	|   ├─ hw_breakpoint_restore()	// 恢复硬件断点
@@ -891,6 +891,7 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
 ## 7.3. 代码分析
 
 ```cpp
+// 运行VCPU(即运行虚拟机)的入口函数
 int kvm_arch_vcpu_ioctl_run(struct kvm_vcpu *vcpu, struct kvm_run *kvm_run)
 {
         int r;
@@ -904,6 +905,7 @@ int kvm_arch_vcpu_ioctl_run(struct kvm_vcpu *vcpu, struct kvm_run *kvm_run)
                         r = -EINTR;
                         goto out;
                 }
+                // 阻塞VCPU，其实就是schdule()调度出去，但在有特殊情况时(比如有挂起的定时器或信号时)，不进行调度而直接退出
                 kvm_vcpu_block(vcpu);
                 kvm_apic_accept_events(vcpu);
                 kvm_clear_request(KVM_REQ_UNHALT, vcpu);
@@ -986,7 +988,9 @@ static int vcpu_run(struct kvm_vcpu *vcpu)
         vcpu->arch.l1tf_flush_l1d = true;
 
         for (;;) {
+                // 判断vcpu状态, KVM_MP_STATE_RUNNABLE
                 if (kvm_vcpu_running(vcpu)) {
+                        /* 进入Guest模式，最终通过VMLAUNCH指令实现*/
                         r = vcpu_enter_guest(vcpu);
                 } else {
                         r = vcpu_block(kvm, vcpu);
@@ -1027,6 +1031,8 @@ static int vcpu_run(struct kvm_vcpu *vcpu)
         return r;
 }
 ```
+
+正常情况下，将kvm\_vcp\-\>arch.mp\_state的取值作为**单机未运行的取值**：`KVM_MP_STATE_RUNNABLE`；如果 vCPU 在 VM 中处于**其他状态**，则会**出错**。在运行中有一个**循环**，直到确认了**vcpu\_enter\_guest**函数执行完毕，即**物理CPU进入了GUEST状态**并且执行完成后，才会执行下一步操作。
 
 `vcpu_run`最终调用`vcpu_enter_guest`，该函数实现了**进入Guest**，并执行**Guest OS具体指令**的操作。对应于Intel平台，该函数为`vmx_vcpu_run`(设置**Guest CR3**和**其他寄存器**、**EPT/影子页表相关设置**、汇编代码VMLAUNCH切换到非根模式，执行Guest目标代码)。
 
