--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -349,13 +349,14 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
         page = alloc_page(); // 分配一页内存给vcpu->run(struct kvm_run)
         kvm_vcpu_init(vcpu, kvm, id); // vcpu结构体一些变量初始化
         kvm_arch_vcpu_create() // 初始化kvm_vcpu_arch结构体, 架构相关
-            vcpu->arch.emulate_ctxt.ops = &emulate_ops; // 没有VMX时的软件模拟, 没人用...
+            vcpu->arch.mp_state = KVM_MP_STATE_UNINITIALIZED/KVM_MP_STATE_RUNNABLE; // 设置vcpu状态
             kvm_set_tsc_khz() // tsc的设置
             kvm_mmu_create() // kvm_vcpu_arch中mmu相关初始化, 内存虚拟化, 地址转换的重点
                 alloc_mmu_pages() // 给vcpu->arch的gust mmu和root mmu分配页面
             kvm_create_lapic() // 初始化lapic
             alloc_page(); // 给kvm_vcpu_arch的pio分配内存页
             vcpu->arch.mce_banks = kzalloc(); // 以及其他一些代码实现初始化mce_banks
+            alloc_emulate_ctxt(vcpu); // 没有VMX时的软件模拟, 没人用...
             vcpu->arch.user_fpu = kmem_cache_zalloc(); //给用户态fpu分配kmem cache
             vcpu->arch.guest_fpu = kmem_cache_zalloc(); // 虚拟机fpu的kmem cache
             kvm_pmu_init(vcpu); // 
@@ -497,6 +498,114 @@ kvm_vcpu结构体见上节
 ```
 
 #### 6.3.1.1. kvm_arch_vcpu_create创建kvm_vcpu
+
+```cpp
+int kvm_arch_vcpu_create(struct kvm_vcpu *vcpu)
+{
+        struct page *page;
+        int r;
+
+        if (!irqchip_in_kernel(vcpu->kvm) || kvm_vcpu_is_reset_bsp(vcpu))
+                vcpu->arch.mp_state = KVM_MP_STATE_RUNNABLE;
+        else
+                vcpu->arch.mp_state = KVM_MP_STATE_UNINITIALIZED;
+
+        kvm_set_tsc_khz(vcpu, max_tsc_khz);
+
+        r = kvm_mmu_create(vcpu);
+        if (r < 0)
+                return r;
+
+        if (irqchip_in_kernel(vcpu->kvm)) {
+                r = kvm_create_lapic(vcpu, lapic_timer_advance_ns);
+                if (r < 0)
+                        goto fail_mmu_destroy;
+                if (kvm_apicv_activated(vcpu->kvm))
+                        vcpu->arch.apicv_active = true;
+        } else
+                static_key_slow_inc(&kvm_no_apic_vcpu);
+
+        r = -ENOMEM;
+
+        page = alloc_page(GFP_KERNEL | __GFP_ZERO);
+        if (!page)
+                goto fail_free_lapic;
+        vcpu->arch.pio_data = page_address(page);
+
+        vcpu->arch.mce_banks = kzalloc(KVM_MAX_MCE_BANKS * sizeof(u64) * 4,
+                                       GFP_KERNEL_ACCOUNT);
+        if (!vcpu->arch.mce_banks)
+                goto fail_free_pio_data;
+        vcpu->arch.mcg_cap = KVM_MAX_MCE_BANKS;
+
+        if (!zalloc_cpumask_var(&vcpu->arch.wbinvd_dirty_mask,
+                                GFP_KERNEL_ACCOUNT))
+                goto fail_free_mce_banks;
+        // 软件模拟
+        if (!alloc_emulate_ctxt(vcpu))
+                goto free_wbinvd_dirty_mask;
+
+        vcpu->arch.user_fpu = kmem_cache_zalloc(x86_fpu_cache,
+                                                GFP_KERNEL_ACCOUNT);
+        if (!vcpu->arch.user_fpu) {
+                pr_err("kvm: failed to allocate userspace's fpu\n");
+                goto free_emulate_ctxt;
+        }
+
+        vcpu->arch.guest_fpu = kmem_cache_zalloc(x86_fpu_cache,
+                                                 GFP_KERNEL_ACCOUNT);
+        if (!vcpu->arch.guest_fpu) {
+                pr_err("kvm: failed to allocate vcpu's fpu\n");
+                goto free_user_fpu;
+        }
+        fx_init(vcpu);
+
+        vcpu->arch.guest_xstate_size = XSAVE_HDR_SIZE + XSAVE_HDR_OFFSET;
+
+        vcpu->arch.maxphyaddr = cpuid_query_maxphyaddr(vcpu);
+
+        vcpu->arch.pat = MSR_IA32_CR_PAT_DEFAULT;
+
+        kvm_async_pf_hash_reset(vcpu);
+        kvm_pmu_init(vcpu);
+
+        vcpu->arch.pending_external_vector = -1;
+        vcpu->arch.preempted_in_kernel = false;
+
+        kvm_hv_vcpu_init(vcpu);
+
+        r = kvm_x86_ops.vcpu_create(vcpu);
+        if (r)
+                goto free_guest_fpu;
+
+        vcpu->arch.arch_capabilities = kvm_get_arch_capabilities();
+        vcpu->arch.msr_platform_info = MSR_PLATFORM_INFO_CPUID_FAULT;
+        kvm_vcpu_mtrr_init(vcpu);
+        vcpu_load(vcpu);
+        kvm_vcpu_reset(vcpu, false);
+        kvm_init_mmu(vcpu, false);
+        vcpu_put(vcpu);
+        return 0;
+
+free_guest_fpu:
+        kmem_cache_free(x86_fpu_cache, vcpu->arch.guest_fpu);
+free_user_fpu:
+        kmem_cache_free(x86_fpu_cache, vcpu->arch.user_fpu);
+free_emulate_ctxt:
+        kmem_cache_free(x86_emulator_cache, vcpu->arch.emulate_ctxt);
+free_wbinvd_dirty_mask:
+        free_cpumask_var(vcpu->arch.wbinvd_dirty_mask);
+fail_free_mce_banks:
+        kfree(vcpu->arch.mce_banks);
+fail_free_pio_data:
+        free_page((unsigned long)vcpu->arch.pio_data);
+fail_free_lapic:
+        kvm_free_lapic(vcpu);
+fail_mmu_destroy:
+        kvm_mmu_destroy(vcpu);
+        return r;
+}
+```
 
 首先，在1371行，调用**kvm\_arch\_vcpu\_create**函数创建一个**kvm\_vcpu结构体！！！**。该创建内容**与架构相关**，因此，直接调用**kvm\_x86\_ops**中的`create_vcpu`方法执行。
 
