--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1006,9 +1006,10 @@ int kvm_arch_vcpu_ioctl_run(struct kvm_vcpu *vcpu, struct kvm_run *kvm_run)
         int r;
         // KVM虚拟机VCPU数据结构载入物理CPU
         vcpu_load(vcpu);
+        // 保证在vCPU的初始化过程中，不会因为来自其他线程的信号干扰而中断
         kvm_sigset_activate(vcpu);
         kvm_load_guest_fpu(vcpu);
-
+        // 当vcpu状态为KVM_MP_STATE_UNINITIALIZED时
         if (unlikely(vcpu->arch.mp_state == KVM_MP_STATE_UNINITIALIZED)) {
                 if (kvm_run->immediate_exit) {
                         r = -EINTR;
@@ -1074,8 +1075,6 @@ out:
 
 1）通过调用**sigprocmask函数**，保证在**vCPU的初始化**过程中，不会因为来自**其他线程的信号干扰而中断**。
 
-2）将**vCPU的状态**切换为`KVM_MP_STATE_UNINITIALIZED`。
-
 3）配置**APIC**和**mmio**的**中断信息**。
 
 4）对要进入的虚拟机进行一些**关键指令的测试**，在测试中主要针对**内存读/写**情况进行测试。
@@ -1128,6 +1127,7 @@ static int vcpu_run(struct kvm_vcpu *vcpu)
                         ++vcpu->stat.signal_exits;
                         break;
                 }
+                /*这是kvm中的一个调度时机点，即选择新VCPU运行的时机点*/
                 if (need_resched()) {
                         srcu_read_unlock(&kvm->srcu, vcpu->srcu_idx);
                         cond_resched();
@@ -1144,6 +1144,156 @@ static int vcpu_run(struct kvm_vcpu *vcpu)
 正常情况下，将kvm\_vcp\-\>arch.mp\_state的取值作为**单机未运行的取值**：`KVM_MP_STATE_RUNNABLE`；如果 vCPU 在 VM 中处于**其他状态**，则会**出错**。在运行中有一个**循环**，直到确认了**vcpu\_enter\_guest**函数执行完毕，即**物理CPU进入了GUEST状态**并且执行完成后，才会执行下一步操作。
 
 `vcpu_run`最终调用`vcpu_enter_guest`，该函数实现了**进入Guest**，并执行**Guest OS具体指令**的操作。对应于Intel平台，该函数为`vmx_vcpu_run`(设置**Guest CR3**和**其他寄存器**、**EPT/影子页表相关设置**、汇编代码VMLAUNCH切换到非根模式，执行Guest目标代码)。
+
+```cpp
+/*
+ * Returns 1 to let vcpu_run() continue the guest execution loop without
+ * exiting to the userspace.  Otherwise, the value will be returned to the
+ * userspace.
+ */
+static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
+{
+        int r;
+        bool req_int_win =
+                dm_request_for_irq_injection(vcpu) &&
+                kvm_cpu_accept_dm_intr(vcpu);
+        enum exit_fastpath_completion exit_fastpath = EXIT_FASTPATH_NONE;
+
+        bool req_immediate_exit = false;
+
+        if (kvm_request_pending(vcpu)) {
+                if (kvm_check_request(KVM_REQ_GET_VMCS12_PAGES, vcpu)) {
+                        if (unlikely(!kvm_x86_ops.get_vmcs12_pages(vcpu))) {
+                                r = 0;
+                                goto out;
+                        }
+                }
+                if (kvm_check_request(KVM_REQ_MMU_RELOAD, vcpu))
+                        kvm_mmu_unload(vcpu);
+                if (kvm_check_request(KVM_REQ_MIGRATE_TIMER, vcpu))
+                        __kvm_migrate_timers(vcpu);
+                if (kvm_check_request(KVM_REQ_MASTERCLOCK_UPDATE, vcpu))
+                        kvm_gen_update_masterclock(vcpu->kvm);
+                if (kvm_check_request(KVM_REQ_GLOBAL_CLOCK_UPDATE, vcpu))
+                        kvm_gen_kvmclock_update(vcpu);
+                if (kvm_check_request(KVM_REQ_CLOCK_UPDATE, vcpu)) {
+                        r = kvm_guest_time_update(vcpu);
+                        if (unlikely(r))
+                                goto out;
+                }
+                if (kvm_check_request(KVM_REQ_MMU_SYNC, vcpu))
+                        kvm_mmu_sync_roots(vcpu);
+                if (kvm_check_request(KVM_REQ_LOAD_MMU_PGD, vcpu))
+                        kvm_mmu_load_pgd(vcpu);
+                if (kvm_check_request(KVM_REQ_TLB_FLUSH, vcpu)) {
+                        kvm_vcpu_flush_tlb_all(vcpu);
+
+                        /* Flushing all ASIDs flushes the current ASID... */
+                        kvm_clear_request(KVM_REQ_TLB_FLUSH_CURRENT, vcpu);
+                }
+                if (kvm_check_request(KVM_REQ_TLB_FLUSH_CURRENT, vcpu))
+                        kvm_vcpu_flush_tlb_current(vcpu);
+                if (kvm_check_request(KVM_REQ_HV_TLB_FLUSH, vcpu))
+                        kvm_vcpu_flush_tlb_guest(vcpu);
+
+                if (kvm_check_request(KVM_REQ_REPORT_TPR_ACCESS, vcpu)) {
+                        vcpu->run->exit_reason = KVM_EXIT_TPR_ACCESS;
+                        r = 0;
+                        goto out;
+                }
+                if (kvm_check_request(KVM_REQ_TRIPLE_FAULT, vcpu)) {
+                        vcpu->run->exit_reason = KVM_EXIT_SHUTDOWN;
+                        vcpu->mmio_needed = 0;
+                        r = 0;
+                        goto out;
+                }
+                if (kvm_check_request(KVM_REQ_APF_HALT, vcpu)) {
+                        /* Page is swapped out. Do synthetic halt */
+                        vcpu->arch.apf.halted = true;
+                        r = 1;
+                        goto out;
+                }
+                if (kvm_check_request(KVM_REQ_STEAL_UPDATE, vcpu))
+                        record_steal_time(vcpu);
+                if (kvm_check_request(KVM_REQ_SMI, vcpu))
+                        process_smi(vcpu);
+                if (kvm_check_request(KVM_REQ_NMI, vcpu))
+                        process_nmi(vcpu);
+                if (kvm_check_request(KVM_REQ_PMU, vcpu))
+                        kvm_pmu_handle_event(vcpu);
+                if (kvm_check_request(KVM_REQ_PMI, vcpu))
+                        kvm_pmu_deliver_pmi(vcpu);
+                if (kvm_check_request(KVM_REQ_IOAPIC_EOI_EXIT, vcpu)) {
+                        BUG_ON(vcpu->arch.pending_ioapic_eoi > 255);
+                        if (test_bit(vcpu->arch.pending_ioapic_eoi,
+                                     vcpu->arch.ioapic_handled_vectors)) {
+                                vcpu->run->exit_reason = KVM_EXIT_IOAPIC_EOI;
+                                vcpu->run->eoi.vector =
+                                                vcpu->arch.pending_ioapic_eoi;
+                                r = 0;
+                                goto out;
+                        }
+                }
+                if (kvm_check_request(KVM_REQ_SCAN_IOAPIC, vcpu))
+                        vcpu_scan_ioapic(vcpu);
+                if (kvm_check_request(KVM_REQ_LOAD_EOI_EXITMAP, vcpu))
+                        vcpu_load_eoi_exitmap(vcpu);
+                if (kvm_check_request(KVM_REQ_APIC_PAGE_RELOAD, vcpu))
+                        kvm_vcpu_reload_apic_access_page(vcpu);
+                if (kvm_check_request(KVM_REQ_HV_CRASH, vcpu)) {
+                        vcpu->run->exit_reason = KVM_EXIT_SYSTEM_EVENT;
+                        vcpu->run->system_event.type = KVM_SYSTEM_EVENT_CRASH;
+                        r = 0;
+                        goto out;
+                }
+                if (kvm_check_request(KVM_REQ_HV_RESET, vcpu)) {
+                        vcpu->run->exit_reason = KVM_EXIT_SYSTEM_EVENT;
+                        vcpu->run->system_event.type = KVM_SYSTEM_EVENT_RESET;
+                        r = 0;
+                        goto out;
+                }
+                if (kvm_check_request(KVM_REQ_HV_EXIT, vcpu)) {
+                        vcpu->run->exit_reason = KVM_EXIT_HYPERV;
+                        vcpu->run->hyperv = vcpu->arch.hyperv.exit;
+                        r = 0;
+                        goto out;
+                }
+
+                /*
+                 * KVM_REQ_HV_STIMER has to be processed after
+                 * KVM_REQ_CLOCK_UPDATE, because Hyper-V SynIC timers
+                 * depend on the guest clock being up-to-date
+                 */
+                if (kvm_check_request(KVM_REQ_HV_STIMER, vcpu))
+                        kvm_hv_process_stimers(vcpu);
+                if (kvm_check_request(KVM_REQ_APICV_UPDATE, vcpu))
+                        kvm_vcpu_update_apicv(vcpu);
+        }
+
+        if (kvm_check_request(KVM_REQ_EVENT, vcpu) || req_int_win) {
+                ++vcpu->stat.req_event;
+                kvm_apic_accept_events(vcpu);
+                if (vcpu->arch.mp_state == KVM_MP_STATE_INIT_RECEIVED) {
+                        r = 1;
+                        goto out;
+                }
+
+                if (inject_pending_event(vcpu) != 0)
+                        req_immediate_exit = true;
+                else {
+                        /* Enable SMI/NMI/IRQ window open exits if needed.
+                         *
+                         * SMIs have three cases:
+                         * 1) They can be nested, and then there is nothing to
+                         *    do here because RSM will cause a vmexit anyway.
+                         * 2) There is an ISA-specific reason why SMI cannot be
+                         *    injected, and the moment when this changes can be
+                         *    intercepted.
+                         * 3) Or the SMI can be pending because
+                         *    inject_pending_event has completed the injection
+                         *    of an IRQ or NMI from the previous vmexit, and
+                         *    then we request an immediate exit to inject the
+```
 
 Guest代码执行到**敏感指令**或因**其他原因**(比如中断/异常)，**VM-Exit退出非根模式**，返回到`vcpu_enter_guest`函数继续执行。
 
